# gts

./: .gitignore  Cargo.toml
benches/: my_benchmark.rs
src/: lib.rs
src/abstract_game/: agent.rs  environment.rs  mod.rs
src/abstract_structs/: mod.rs
src/abstractions/: agent.rs  environment.rs  mod.rs  play.rs
src/agents/: alphabeta_agent.rs  alphabeta_agent_giovanni.rs  human_agent.rs  mcts_utc_agent.rs  minmax_agent.rs  mod.rs
src/cache/: action_environment_iter.rs  cache.rs  minmax_data.rs  mod.rs  node.rs  stored.rs  utils.rs
src/games/othello/: environment.rs  mod.rs
src/othello/: environment.rs
src/tictactoe/: agentid.rs  environment.rs  mod.rs
src/tictactoe/board/: actioniter.rs  display.rs  environment.rs  mod.rs  utils.rs
src/tree_search/: alphabeta.rs  depth_first.rs  greedy_reward.rs  mcts.rs  minmax.rs  mod.rs  update_tree.rs
src/tree_search/mcts/: base.rs  mod.rs  uct.rs  utils.rs
src/tree_search/minmax/: alphabeta.rs  depth_first.rs  minmax.rs  mod.rs  utils.rs
src/tree_search_giovanni/: alpha_beta_giovanni.rs  mod.rs
tests/: t_tree_search.rs
