[package]
name = "gts"
version = "0.1.0"
authors = ["anonymous"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    # minmax-tree-search = {git = "https://github.com/prangel-git/minmax-tree-search.git", branch = "main"}
    # minmax-tree-search = {path = "../minmax-tree-search"}
